--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "wedding-website",
 	"version": "0.0.0",
+  "type": "module",
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
